@@ -805,7 +805,8 @@ Each elements are regexp of field-name.")
     (narrow-to-region (point-max)(point-max))
     (mime-insert-text-content entity)
     (run-hooks 'mime-text-decode-hook)
-    (let ((beg (point-min)))
+    (let ((beg (point-min))
+	  (adaptive-fill-mode nil))
       (remove-text-properties beg (point-max) '(face nil))
       (richtext-decode beg (point-max))
       )))
@@ -815,7 +816,8 @@ Each elements are regexp of field-name.")
     (narrow-to-region (point-max)(point-max))
     (mime-insert-text-content entity)
     (run-hooks 'mime-text-decode-hook)
-    (let ((beg (point-min)))
+    (let ((beg (point-min))
+	  (adaptive-fill-mode nil))
       (remove-text-properties beg (point-max) '(face nil))
       (enriched-decode beg (point-max))
       )))
